Implement GitHub new release detection on project screen

--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -412,3 +412,8 @@
     -fx-border-radius: 0;
     -fx-border-color: white;
 }
+
+.hyperlink {
+    -fx-text-fill: #00ff00;
+    -fx-border-color: transparent;
+}
