--- a/src/main/resources/fxml/projectSelect.fxml
+++ b/src/main/resources/fxml/projectSelect.fxml
@@ -18,7 +18,7 @@
       <children>
          <HBox alignment="TOP_CENTER" layoutX="-3.0" prefHeight="693.0" prefWidth="992.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="0.0">
             <children>
-               <VBox alignment="CENTER" prefHeight="603.0" prefWidth="563.0" spacing="20.0" HBox.hgrow="ALWAYS">
+               <VBox fx:id="projectVBox" alignment="CENTER" prefHeight="603.0" prefWidth="563.0" spacing="20.0" HBox.hgrow="ALWAYS">
                   <children>
                      <VBox fx:id="imageVBox" alignment="TOP_CENTER" minHeight="10.0" minWidth="0.0" prefHeight="200.0" prefWidth="527.0">
                         <children>
@@ -48,7 +48,7 @@
                      <CheckBox fx:id="startMutedCheckBox" mnemonicParsing="false" text="Start muted" />
                      <HBox alignment="CENTER" spacing="20.0">
                         <children>
-                           <Label fx:id="versionLabel" minWidth="42.0" prefHeight="18.0" prefWidth="42.0" text="v1.32.1" />
+                           <Label fx:id="versionLabel" minWidth="42.0" prefHeight="18.0" prefWidth="42.0" text="v1.32.2" />
                            <Label prefHeight="54.0" prefWidth="379.0" text="Email me at james@ball.sh or create an issue on GitHub for feature suggestions, issues, or opportunites I might be interested in!" textAlignment="CENTER" wrapText="true" />
                            <Button fx:id="logButton" minWidth="102.0" mnemonicParsing="false" prefWidth="102.0" text="Open log folder" />
                         </children>
